    - new options --current-tty and --print-commands-only;
    - on Linux 'setupcon --save' creates in /etc/console-setup/
      configuration scripts for faster boot configuration.
    - on Linux load the font and the console map using only one
      setfont command;
  * On Linux: use precomputed scripts and Udev to configure the console.

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 26 Feb 2016 19:15:18 +0300

console-setup (1.137) unstable; urgency=medium

  [ Anton Zinoviev ]
  * bug-control: add gnome-control-center to the packages in the
    package-status list as it modifies /etc/default/keyboard.

 -- Christian Perrier <bubulle@debian.org>  Mon, 22 Feb 2016 07:08:37 +0100

console-setup (1.136) unstable; urgency=medium

  [ Colin Watson ]
  * Use HTTPS for Vcs-* URLs, and link to cgit rather than gitweb.

 -- Christian Perrier <bubulle@debian.org>  Mon, 01 Feb 2016 06:56:04 +0100

console-setup (1.135) unstable; urgency=medium

  [ Updated translations ]
  * Swedish (sv.po) by Martin Bagge / brother

 -- Christian Perrier <bubulle@debian.org>  Thu, 28 Jan 2016 08:09:47 +0100

console-setup (1.134) unstable; urgency=medium

  [ Colin Watson ]
  * debian/keyboard-configuration.postinst: Test for the Hurd using uname
    rather than udpkg, to avoid stderr noise in non-d-i contexts.

 -- Christian Perrier <bubulle@debian.org>  Tue, 27 Oct 2015 06:45:06 +0100

console-setup (1.133) unstable; urgency=medium

  [ Updated translations ]
  * Turkish (tr.po) by Mert Dirik

 -- Christian Perrier <bubulle@debian.org>  Thu, 24 Sep 2015 06:49:17 +0200

console-setup (1.132) unstable; urgency=medium

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan

 -- Christian Perrier <bubulle@debian.org>  Thu, 24 Sep 2015 06:48:46 +0200

console-setup (1.131) unstable; urgency=medium

  [ Updated translations ]
  * Turkish (tr.po) by Mert Dirik

 -- Christian Perrier <bubulle@debian.org>  Sat, 25 Jul 2015 07:32:23 +0200

console-setup (1.130) unstable; urgency=medium
