@@ -1,6 +1,6 @@
 #!/bin/sh
 ### BEGIN INIT INFO
-# Provides:          console-setup
+# Provides:          console-setup.sh
 # Required-Start:    $remote_fs
 # Required-Stop:
 # Should-Start:      console-screen kbd
@@ -9,10 +9,6 @@
 # X-Interactive:     true
 # Short-Description: Set console font and keymap
 ### END INIT INFO
-
-# This script is used jointly by console-setup and console-setup-mini.
-# It belongs to keyboard-configuration because it is forbidden two
-# different packages to share common configuration file.
 
 do_configure=no
 if [ -f /bin/setupcon ]; then
@@ -31,19 +27,6 @@ if [ -f /bin/setupcon ]; then
                 [ ! -f /run/console-setup/boot_completed ] || do_configure=yes
                 mkdir -p /run/console-setup
                 > /run/console-setup/boot_completed
-
-                # If we want to be fast when configuring the console,
-                # then we have no time to look at the configuration
-                # files and to compute how exactly to configure the
-                # console.  One solution is to ask from the sysadmin
-                # to run 'setupcon --save' after each change in the
-                # configuration files.  But when we do this, we
-                # receive bugs that the console configuration doesn't
-                # work.  The following code is a compromise: we test
-                # whether the confinguration files have changed and if
-                # they have, we run 'setupcon --save'.  The next time
-                # the system boots, we will be able to configure the
-                # console quickly.
 
                 [ /etc/console-setup/cached_setup_terminal.sh \
                       -nt /etc/default/keyboard ] || do_configure=yes
