@@ -2,6 +2,8 @@
 
 set -e
 
+dpkg-maintscript-helper rm_conffile /etc/init.d/keyboard-setup 1.138~ -- "$@"
+dpkg-maintscript-helper rm_conffile /etc/init.d/console-setup 1.138~ -- "$@"
 if [ purge = "$1" ]; then
     rm -f /etc/default/keyboard
 fi
